[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/core/CardChoices.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=1]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="CardChoices" type="PopupMenu"]
offset_right = 20.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
items = [ "Title", null, 0, false, true, 0, 0, null, "", false, "(Click anywhere else to abort)", null, 0, false, true, 1, 0, null, "", false, "", null, 0, false, true, 2, 0, null, "", true ]
script = ExtResource( 1 )

[node name="HorizontalHighlights" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 2 )

[node name="VecticalHighlights" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 3 )
[connection signal="id_pressed" from="." to="." method="_on_CardChoices_id_pressed"]
[connection signal="popup_hide" from="." to="." method="_on_CardChoices_popup_hide"]
